# fwh_sentinel2

./: .gitignore  EXAMPLES.md  README.md  agent.py  pyproject.toml  sentinel2
agent-spec/: cache-layout.agent-spec.yaml  tools-pattern.agent-spec.yaml
src/sentinel2/: __init__.py  catalog.py  catalog.yaml
src/sentinel2/ffl/: sentinel2_landchange.ffl
src/sentinel2/handlers/: __init__.py
src/sentinel2/handlers/analyze/: analyze_handlers.py
src/sentinel2/handlers/geo/: geo_handlers.py
src/sentinel2/handlers/level/: level_handlers.py
src/sentinel2/handlers/render/: render_handlers.py
src/sentinel2/handlers/shared/: s2_utils.py
src/sentinel2/handlers/source/: source_handlers.py
src/sentinel2/handlers/timeseries/: timeseries_handlers.py
src/sentinel2/tools/: README.md  find-lake-gauge.sh  find_lake_gauge.py  lake-level.sh  lake_level.py  reservoir-storage.sh  reservoir_storage.py  search-scenes.sh  search_scenes.py  usbr-storage.sh  usbr_storage.py
src/sentinel2/tools/_s2_tools/: __init__.py  geocode.py  level.py  map_render.py  raster.py  s2_mocks.py  sidecar.py  stac.py  storage.py  timeseries.py
tests/: test_catalog_manifest.py  test_sentinel2_landchange.py
